--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -5,8 +5,7 @@ index.html page.
 Author: Luke Laurie
 Date: 3/21/2023
  */
-html,
-body {
+html, body {
   margin: 0;
   height: 100%;
   background-color: rgb(136, 220, 248);
@@ -37,8 +36,7 @@ body {
   background-color: rgb(175, 244, 175);
 }
 
-#userOptions,
-#itemSection {
+#userOptions, #itemSection {
   background-color: rgb(175, 244, 175);
   border-top: 3px solid gray;
   border-bottom: 3px solid gray;
